components/policies/rings/ring-2/kflux-ocp-p01/art-token-broker-rbac/.chainsaw-test/chainsaw-assert-clusterrolebinding-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: deny-art-token-broker-clusterrolebindings.konflux-ci.dev
status:
  observedGeneration: 1
  typeChecking: {}
